# fast-todo

./: .editorconfig  README.md
back/: .gitignore  db.sqlite  pyproject.toml
back/app/: dependencies.py  main.py
back/app/db/: database.py  models.py  operations.py  schemas.py
back/app/routers/: todo.py
front/: env.d.ts  index.html  package.json
front/src/: App.vue  main.ts
front/src/components/: AddTask.vue  NoData.vue  TaskList.vue
front/src/plugins/: axios.ts
front/src/views/: HomeView.vue
